# 3DGS-studio

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
